# nixcfg

./: flake.nix  overlays.nix  pyproject.toml  update-packages.sh
dev/: checks.nix  private.narHash  test-configurations.nix
dev/private/: flake.nix
home/: default.nix
home/cli/: bat.nix  fish.nix  git.nix  lazygit.nix  nnn.nix  tmux.nix
home/cli/direnv/: default.nix
home/cli/direnv/layouts/: python_uv.sh
home/cli/fish/: default.nix
home/cli/tmux/: ascii.nix  base.nix  default.nix
nixos/: default.nix
nixos/cli/: default.nix  fish.nix  minimal.nix  packages.nix  systools.nix
nixos/mixins/: tailscale.nix
scripts/: google-ocr.py  link-paperless-docs.py  update-dev.sh  update-packages.sh
