[project]
name = "nixcfg"
version = "0.1.0"
description = "nix configs & scripts"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "google-cloud-documentai>=2.32.0",
    "google-cloud-documentai-toolbox>=0.14.0a0",
    "ocrmypdf>=16.5.0",
    "pikepdf>=8.15.1",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
    "pydantic>=2.9.2",
]
